# Zipignore

./: .gitignore  .zipignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  setup.py  zipignore.py
tests/: test_ignore_rules.py  test_naming.py  test_zip_creation.py
zipignore/: cli.py  core.py  logger.py
